packages/rspack-test-tools/tests/configCases/errors/stack-overflow/index.js
// This file is intentionally empty
// The test will fail due to the stack overflow in the plugin
